2003-07-16 Vera Albrecht <albrecht@danalyse.de>

	* frontend/{device.c,parse.c,vectors.c,com_compose.c} :
	More memory leaks closed in utility commands and functions.

2003-07-16 Stefan Jones <stefan.jones@multigig.com>

	* src/frontend/{com_compose.c,cpitf.c,device.c,subckt.c,vectors.c}
	src/frontend/plotting/plotit.c src/include/ngspice.h
	src/spicelib/parser/{inp2dot.c,inp2r.c,inpdomod.c,inpdpar.c,inpgmod.c,inppas3.c} :
	Rest of the serious deck reader leaks, plus fixes for the last batch.

2003-07-15 Stefan Jones <stefan.jones@multigig.com>

	* /src/frontend/{com_let.c,com_set.c,evaluate.c,parse.c,variable.c}
	src/frontend/parser/complete.c :
	Memory leaks plugged

2003-07-09 Stefan Jones <stefan.jones@multigig.com>

	* configure.in : Add extra check for tclreadline and headers

2003-04-14 Stefan Jones <stefan.jones@multigig.com>

	* Make all the devices in src/spicelib/devices be built as
	archives not shared libraries, and don't install them

2003-06-22  Stuart Brorson  <sdb@cloud9.net>
 
 	*  Finally got SPICE2 POLY stuff working.  This involved lots of changes
 	in src/xspice/mif and src/xspice/enh.  Particular changes were made in:
 	   --  MIF_INP2A: re-arranged logic to fix parsing problems.
 	   --  two2three_translate: fixed some stupid pointer problems.
 	   --  etc.
 
 	*  Revamped src/xspice/icm/ and src/xspice/icm/icm_spice2poly
 	directories to enable build of POLY codemodel.  Makefiles were
 	fixed, and some stuff was added to enable cmpp (from SPICE Opus)
 	to build the codemodel precursors correctly.  (Note that you need
 	to download and install SPICE Opus to rebuild the codemodel
 	stuff.  See  src/xspice/icm/README for more details.)
 
 	*  Hacked Makefile.am's for much of the directory hierarchy, particularly
 	for src/xspice/icm and src/xspice/icm/icm_spice2poly to build the POLY
 	codemodel correctly.  Note that top level make still doesn't detect 
 	changes in the xspice hierarchy; read the NOTES file for a workaround.
 