@@ -1,3 +1,9 @@
+2003-07-17 Steven Borley <sjb@salix.demon.co.uk>
+
+	* src/frontend/resource.c src/frontend/parser/complete.c
+	src/spicelib/devices/txl/txlload.c :
+	#ifdef fixes to get ngspice to compile on Mac OSX
+
 2003-07-16 Vera Albrecht <albrecht@danalyse.de>
 
 	* frontend/{device.c,parse.c,vectors.c,com_compose.c} :
